--- a/src/assets/scss/utils/_card.scss
+++ b/src/assets/scss/utils/_card.scss
@@ -50,13 +50,14 @@
   width: 179px;
   height: 32px;
   background: #ffffff;
-  border: 4px solid #08a6bb;
+  border: 3px solid #08a6bb;
   box-sizing: border-box;
   border-radius: 8px;
   font-weight: bold;
   font-size: 14px;
   color: #08a6bb;
   margin-bottom: 20px;
+  transition: all .3s;
 }
 .card .card-btn button:hover {
   color: #ffffff;
