--- a/src/assets/scss/utils/_card.scss
+++ b/src/assets/scss/utils/_card.scss
@@ -6,41 +6,43 @@
   border-radius: 8px;
 }
 .card img {
+  max-width: 296px;
+  height: 184px;
   border-radius: 8px 8px 0 0;
 }
-.card .card-title {
-  margin-top: 30px;
-  margin-left: 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
+.card .card-body {
+  height: 150px;
 }
-.card .card-title h3 {
+.card .card-body h3 {
   font-weight: bold;
   font-size: 20px;
   color: #525151;
-  margin: 0;
+  margin-bottom: 20px;
 }
-.card .card-title span {
-  margin-right: 15px;
+.card .card-body span {
   font-weight: 300;
   font-size: 12px;
   color: #6f7789;
 }
-.card .card-title span i {
+.card .card-body span i {
   margin-right: 6px;
 }
-.card .card-text {
+.card .card-body p {
   font-weight: 500;
   font-size: 16px;
   color: #6f7789;
-  margin-top: 17px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-.card .card-text i {
+.card .card-body p i {
   color: #08a6bb;
-  margin-right: 5px;
+  margin-right: 6px;
+}
+.card .card-footer {
+  padding: 0;
+  background: #FFFFFF;
+  border-radius: 0 0 8px 8px;
+  border-top: 0px;
 }
 .card .card-btn {
   display: flex;
