修改畫面及RWD

--- a/src/assets/scss/utils/_card.scss
+++ b/src/assets/scss/utils/_card.scss
@@ -62,3 +62,8 @@
   color: #ffffff;
   background-color: #08a6bb;
 }
+@media (max-width: 768px) {
+  .card .card-btn button{
+    width: 130px;
+  }
+}
